--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "date-fns": "^2.30.0",
     "moment": "^2.29.4",
     "react": "18.2.0",
+    "react-devtools": "^5.0.0",
     "react-native": "0.72.6",
     "react-native-calendars": "^1.1302.0",
     "react-native-gesture-handler": "^2.13.4",
