--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -9,6 +9,9 @@
       android:roundIcon="@mipmap/ic_launcher_round"
       android:allowBackup="false"
       android:theme="@style/AppTheme">
+      <meta
+      android:name="com.google.android.geo.API_KEY"
+      android:value="AIzaSyBJvvPvzCPEAaTa2abV448G_aYJPgDz0-c"/>
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
