--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.22.3",
+    "@react-native-community/geolocation": "^3.2.0",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.16",
     "axios": "^1.6.0",
@@ -20,7 +22,9 @@
     "react-native": "0.72.6",
     "react-native-calendars": "^1.1302.0",
     "react-native-gesture-handler": "^2.13.4",
+    "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-image-picker": "^7.0.2",
+    "react-native-maps": "^1.11.3",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
     "react-native-vector-icons": "^10.0.1"
