--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-BACKEND_URL = http://lsdrivebackend.ramo.co.in
+API_URL = http://10.0.2.2:8000
+GOOGLE_MAP_API_KEY = AIzaSyBJvvPvzCPEAaTa2abV448G_aYJPgDz0-c
