production build made

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-API_URL = http://10.0.2.2:8000
+API_URL = http://lsdrivebackend.ramo.co.in
 GOOGLE_MAP_API_KEY = AIzaSyBJvvPvzCPEAaTa2abV448G_aYJPgDz0-c
