--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "driver_connect",
+  "name": "driverconnect",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -27,7 +27,8 @@
     "react-native-maps": "^1.11.3",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
-    "react-native-vector-icons": "^10.0.1"
+    "react-native-vector-icons": "^10.0.1",
+    "expo": "^49.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
