--- a/package.json
+++ b/package.json
@@ -11,24 +11,27 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.22.3",
+    "@react-native-community/datetimepicker": "^7.6.4",
     "@react-native-community/geolocation": "^3.2.0",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.16",
     "axios": "^1.6.0",
     "date-fns": "^2.30.0",
+    "expo": "^49.0.0",
     "moment": "^2.29.4",
     "react": "18.2.0",
     "react-devtools": "^5.0.0",
     "react-native": "0.72.6",
     "react-native-calendars": "^1.1302.0",
+    "react-native-date-picker": "^5.0.1",
+    "react-native-datepicker": "^1.7.2",
     "react-native-gesture-handler": "^2.13.4",
     "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-image-picker": "^7.0.2",
     "react-native-maps": "^1.11.3",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
-    "react-native-vector-icons": "^10.0.1",
-    "expo": "^49.0.0"
+    "react-native-vector-icons": "^10.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
